[project]
name = "context-broker"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for semantic code search using sentence transformers"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Context Broker Team"},
]
keywords = ["mcp", "semantic-search", "code-search", "ai", "claude", "kimi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.14.4",
    "numpy>=2.4.2",
    "rich>=14.3.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/context-broker"
Documentation = "https://github.com/yourusername/context-broker#readme"
Repository = "https://github.com/yourusername/context-broker"
Issues = "https://github.com/yourusername/context-broker/issues"

[project.scripts]
context-broker = "context_broker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_broker"]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
